# PersonalFinanceAnalyzer

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_RUN.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml  deploy.yml  secret-scan.yml
.streamlit/: config.toml
app/: __init__.py  auth.py  database.py  models.py  reports.py  repositories.py  services.py  ui.py  utils.py
db/: sample_queries.sql  schema.sql  seed.sql
docs/: README_PROJECT.md  adr.md  techstack.md
docs/stories/: dashboard.md  ideas.md  user_auth.md  user_story_&_ACs_1.md  user_story_&_ACs_2.md  user_story_&_ACs_3.md  user_story_&_ACs_4.md  user_story_&_ACs_5.md  user_story_&_ACs_6.md  user_story_&_ACs_7.md  userstories.md
src/: app.py  db.py  health_check.py  logging_config.py
src/services/: __init__.py  auth_service.py  finance_service.py  notifications.py  preferences_service.py  validation_service.py
src/ui/: __init__.py  auth_page.py  dashboard_page.py  dashboard_styles.py
tests/: conftest.py
tests/e2e/: test_upload_and_dashboard.py
tests/integration/: test_auth_flow.py  test_finance_service.py
tests/unit/: test_auth_passwords.py  test_confirmation_message.py  test_preferences_service.py  test_validation.py
views/: __init__.py  budget.py  dashboard.py  reports.py  transactions.py  upload.py
