[project]
name = "personalfinanceanalyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "Bradley Brenning",email = "Brenbra132@gmail.com"}
]

[tool.poetry]
# Disable package mode so Poetry will be used only for dependency management
# in CI / pre-commit hooks. This avoids Poetry attempting to install the
# project as a package when there is no package layout configured. Setting
# `package = false` instructs Poetry not to treat the repository as an
# installable package during `poetry install`.
package = false
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "streamlit (>=1.56.0,<2.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "reportlab (>=4.2.5,<5.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
ruff = "^0.6.9"
pre-commit = "^4.5.1"
mypy = "^1.20.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = false
warn_unused_configs = true
exclude = ["tests"]
